fixed hero section overlap

--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -23,8 +23,8 @@
     }
 
     .typeAnimation{
-        position: absolute;
-        top: 15%;
+        // position: absolute;
+        // top: 15%;
         color: black;
     }
 
@@ -35,8 +35,8 @@
     }
   
     .human1 {
-      position: absolute;
-      bottom: 4%;
+       position: relative;
+      // bottom: 4%;
       height: 30rem;
       z-index: 100000000000;
 
